--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "dev": "nodemon server"
+    "back": "nodemon server",
+    "front": "npm start --prefix client"
   },
   "keywords": [],
   "author": "",
