--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server",
     "back": "nodemon server",
-    "front": "npm start --prefix client"
+    "front": "npm start --prefix client",
+    "dev": "concurrently \"npm run back\" \"npm run front\""
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13"
