--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server",
     "back": "nodemon server",
     "front": "npm start --prefix client",
-    "dev": "concurrently \"npm run back\" \"npm run front\""
+    "dev": "concurrently \"npm run back\" \"npm run front\"",
+    "build": "npm i --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
